--- a/RecipeCookbook.UWP/RecipeCookbook.UWP.csproj
+++ b/RecipeCookbook.UWP/RecipeCookbook.UWP.csproj
@@ -145,6 +145,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm">
+      <Version>7.1.2</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
