--- a/RecipeCookbook/RecipeCookbook.csproj
+++ b/RecipeCookbook/RecipeCookbook.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
 	  <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
-	  <LangVersion>8.0</LangVersion>
+	  <LangVersion>9.0</LangVersion>
 	  <Nullable>enable</Nullable>
   </PropertyGroup>
 
@@ -14,7 +14,9 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.4.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.ObjectModel" Version="4.3.0" />
     <PackageReference Include="System.Text.Json" Version="6.0.5" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
