--- a/RecipeCookbook/RecipeCookbook.csproj
+++ b/RecipeCookbook/RecipeCookbook.csproj
@@ -29,6 +29,9 @@
     <EmbeddedResource Update="Views\AddRecipe.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\EditRecipe.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\RecipeDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
